--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,7 @@
 PORT=3333
 
 # Database
-DATABASE_URL=postgresql://docker:docker@localhost:5432/agents
+DATABASE_URL="postgresql://docker:docker@localhost:5432/agents"
+
+# Gemini
+GEMINI_API_KEY="your_api_key_here"
